[package]
name = "imaging_diffusion"
version = "0.1.0"
edition = "2018"

[dependencies]
atomecs = "0.6.0"
specs = "0.17.0"
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
rand = "0.8.3"
rand_distr = "0.4.0"
rayon = "1.5.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
hdf5 = "0.8.1"
ndarray = "0.15"